--- a/ComexDriver/.cproject
+++ b/ComexDriver/.cproject
@@ -74,7 +74,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Peripherals|cmd_f2802x|28069_RAM_lnk.cmd|F28027.cmd|PwmMenu.c|MenuStrings.c|GpioMenu.c|bootstrap.c|AdcMenu.c|Example_2806xECap_Capture_Pwm.c|F2806x_common/cmd|F2806x_common/cmd/F2806x_Headers_BIOS.cmd|f2802x_common/cmd/RAM.cmd|MWare|include/libc/rts2800_fpu32.lib|f2802x_common/source/F2802x_SWPrioritizedDefaultIsr.c|f2802x_common/source/F2802x_SWPrioritizedPieVect.c|include/sysctrl.obj|include/sci.obj|include/pievect.obj|include/piecontrol.obj|include/gpio.obj|include/globals.obj|include/F2802x_usDelay.obj|include/F2802x_CSMPasswords.obj|include/F2802x_CodeStartBranch.obj|include/F2802x_asmfuncs.obj|include/epwm.obj|include/default_isr.obj|include/adc.obj|include/link.cmd|f2802x_common/source/not_used|include/libc/src|28027_RAM_lnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Peripherals|cmd_f2802x|28069_RAM_lnk.cmd|F28027.cmd|MenuStrings.c|GpioMenu.c|bootstrap.c|AdcMenu.c|Example_2806xECap_Capture_Pwm.c|F2806x_common/cmd|F2806x_common/cmd/F2806x_Headers_BIOS.cmd|f2802x_common/cmd/RAM.cmd|MWare|include/libc/rts2800_fpu32.lib|f2802x_common/source/F2802x_SWPrioritizedDefaultIsr.c|f2802x_common/source/F2802x_SWPrioritizedPieVect.c|include/sysctrl.obj|include/sci.obj|include/pievect.obj|include/piecontrol.obj|include/gpio.obj|include/globals.obj|include/F2802x_usDelay.obj|include/F2802x_CSMPasswords.obj|include/F2802x_CodeStartBranch.obj|include/F2802x_asmfuncs.obj|include/epwm.obj|include/default_isr.obj|include/adc.obj|include/link.cmd|f2802x_common/source/not_used|include/libc/src|28027_RAM_lnk.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -157,4 +157,13 @@
 	<storageModule moduleId="scannerConfiguration"/>
 	<storageModule moduleId="null.endianPreference"/>
 	<storageModule moduleId="cpuFamily"/>
+	<storageModule moduleId="org.eclipse.cdt.core.language.mapping">
+		<project-mappings>
+			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.asmSource" language="com.ti.ccstudio.core.TIASMLanguage"/>
+			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.cHeader" language="com.ti.ccstudio.core.TIGCCLanguage"/>
+			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.cSource" language="com.ti.ccstudio.core.TIGCCLanguage"/>
+			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.cxxHeader" language="com.ti.ccstudio.core.TIGPPLanguage"/>
+			<content-type-mapping configuration="" content-type="org.eclipse.cdt.core.cxxSource" language="com.ti.ccstudio.core.TIGPPLanguage"/>
+		</project-mappings>
+	</storageModule>
 </cproject>
