--- a/ComexDriver/.settings/org.eclipse.core.resources.prefs
+++ b/ComexDriver/.settings/org.eclipse.core.resources.prefs
@@ -61,6 +61,48 @@ encoding//Debug/optimizerAssistant/opt_for_speed__5/objects.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_for_speed__5/sources.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_for_speed__5/subdir_rules.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_for_speed__5/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__0/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__1/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__2/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__3/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__4/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/cmd_f2806x/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/cmd_f2806x/subdir_vars.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/makefile=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/objects.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/sources.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/subdir_rules.mk=UTF-8
+encoding//Debug/optimizerAssistant/opt_level__off/subdir_vars.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/subdir_rules.mk=UTF-8
 encoding//Debug/subdir_vars.mk=UTF-8
